# CluckClick

backend/: pyproject.toml
backend/app/: database.py  entities.py  main.py  schema.py
backend/app/routers/: clicks.py  items.py  users.py
backend/tests/: tests.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  App.svelte  app.css  index.css
frontend/src/api/: entities.ts
frontend/src/assets/: test.json
frontend/src/components/: CategorySelection.jsx  ItemComponents.css  ItemComponents.jsx
frontend/src/lib/: Counter.svelte  Item.svelte  ItemGrid.svelte
frontend/src/pages/: ButtonsPage.jsx  ConfigPage.css  ConfigPage.jsx  HomePage.svelte  SettingsPage.svelte
